# zxcl-pc-jstris-tbp

./: .gitignore  Cargo.toml  README.md  build.sh
.cargo/: config.toml
data/: proj.zlib  proj_ext.zlib  values.zlib
js/: node_smoke.js  pc_main.js
scripts/: pack_values.py
src/: bot.rs  graph.rs  lib.rs  tbpcoord.rs
src/engine/: movegen.rs  piece.rs  proj.rs  value_search.rs  values.rs
webtest/: host.js  index.html
