[package]
name = "pcbot_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
hashbrown = "0.14"
miniz_oxide = "0.8"   # pure-Rust inflate for the wasm-embedded (zlib) data blobs

# rayon powers the OPTIONAL parallel build/solve, used only by the native harnesses; the deployed
# wasm bot is single-threaded (always passes par_edge: None) so rayon is excluded from that target
# entirely — not fetched, not compiled, not linked.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
